# ewc.pytorch

./: .gitignore  README.md  data.py  demo-update.py  demo.ipynb  demo.py  demo2.ipynb  mnist_2.py  pyproject.toml  requirements-win-cuda.txt  requirements.txt  utils.py
notebooks/: check_if_cuda.ipynb  demo-Copy1.ipynb  demo-update.ipynb  demo.ipynb
src/: data.py  demo.py  mnist_3t.py  utils.py
